# laagent

./: .gitignore  AGENTS.md  CLAUDE.md  pom.xml
la-agent-py/: .env.example  .gitignore  babel.cfg  compile_i18n.py  docker-compose.yml  gunicorn.config.py  messages.pot  pyproject.toml  readme.md  requirements.txt  run.py  start.sh
la-agent-py/app/: __init__.py  app_init.py
la-agent-py/app/auth/: __init__.py  auth_content.py  request_filter.py  service.py
la-agent-py/app/babel/: __init__.py  bable.py
la-agent-py/app/blueprints/: __init__.py  agent_plueprint.py  auth_blueprint.py  chat_blueprint.py  chat_histories_blueprint.py  conversation_blueprint.py  document_blueprint.py  feedback_blueprint.py  file_blueprint.py  knowledge_blueprint.py  llm_blueprint.py  menu_blueprint.py  permission_resource_blueprint.py  question_range_blueprint.py  register_all.py  sensitive_blueprint.py  tag_blueprint.py  tool_blueprint.py  user_settings_blueprint.py
la-agent-py/app/celery/: __init__.py  celery_tasks.py
la-agent-py/app/constants/: __init__.py
la-agent-py/app/core/: __init__.py  prompts.py
la-agent-py/app/data_permission/: __init__.py  data_perm.py
la-agent-py/app/database/: __init__.py  database_settings.py  page_sql_helper.py
la-agent-py/app/entities/: __init__.py  agent.py  agent_graph.py  auth_user.py  conversation.py  conversation_history.py  document.py  feedback.py  knowledge_base.py  knowledge_base_document_relationship.py  llm.py  menu.py  permission_resource.py  question_range.py  review.py  tag.py  tool.py  (+1 more)
la-agent-py/config/: __init__.py  local.yaml
(+467 files in other folders)
